# glibc

./: ChangeLog  Makeconfig  config.h.in  configure  configure.ac
elf/: dl-load.c  dl-support.c  elf.h  rtld.c
include/: libc-symbols.h  link.h
include/bits/: setjmp3.h
inet/: inet6_scopeid_pton.c
io/: Makefile
manual/: llio.texi  pattern.texi  process.texi  users.texi
misc/: Makefile
nptl/: Makefile  allocatestack.c  descr.h  nptl-init.c  pthreadP.h  pthread_cancel.c  pthread_create.c  pthread_detach.c  pthread_exit.c  pthread_join.c  tst-cancel28.c  tst-cancel4.c
nss/: getXXbyYY_r.c
posix/: Makefile
setjmp/: Makefile  longjmp.c  setjmp.h  sigjmp.c
setjmp/bits/: setjmp3.h
support/: temp_file.c  temp_file.h
sysdeps/aarch64/: Makefile  Versions  tcb-version.c
sysdeps/aarch64/nptl/: tls.h
sysdeps/generic/: ldsodefs.h
sysdeps/i386/: configure  configure.ac  dl-machine.h  function-attrs.h
sysdeps/i386/nptl/: tls.h
sysdeps/nptl/: lowlevellock.h
sysdeps/posix/: pause.c  sigpause.c
sysdeps/unix/sysv/linux/: Makefile  Versions  creat.c  creat64.c  fcntl.c  lowlevellock-futex.h  open.c  open64.c  pause.c  read.c  readv.c  select.c  send.c  sigtimedwait.c  sigwait.c  syscall_cancel.c  syscalls.list  sysdep.h  write.c
sysdeps/unix/sysv/linux/aarch64/: ld.abilist  sysdep-cancel.h  sysdep.h
sysdeps/unix/sysv/linux/alpha/: Makefile  (+1 more)
sysdeps/unix/sysv/linux/x86/: Makefile  configure  configure.ac  dl-cet-nonshared.c  dl-cet.c  dl-cet.h
sysdeps/x86/: cpu-features.h
sysdeps/x86_64/: configure  configure.ac  dl-machine.h
sysdeps/x86_64/nptl/: tls.h
(+37 files in other folders)
